--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,17 @@
   line-height: 1.5;
   font-weight: 400;
 
+  /* Farbvariablen Dark Mode (Default) */
+
+  --color-text: rgba(255, 255, 255, 0.87);
+  --color-bg: #242424;
+  --color-link: #9497c2;
+  --color-link-hover: #444792;
+  --color-button-bg: #1a1a1a;
+
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-text);
+  background-color: var(--color-bg);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +23,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--color-link);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--color-link-hover);
 }
 
 body {
@@ -28,6 +36,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: var(--color-text);
+  background-color: var(--color-bg);
 }
 
 h1 {
@@ -42,7 +52,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-button-bg);
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -56,13 +66,18 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --color-text: #213547;
+    --color-bg: #ffffff;
+    --color-link-hover: #5d63d3;
+    --color-button-bg: #f9f9f9;
+
+    color: var(--color-text);
+    background-color: var(--color-bg);
   }
   a:hover {
-    color: #747bff;
+    color: var(--color-link-hover);
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--color-button-bg);
   }
 }
