--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,28 +1,20 @@
-
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.appWrapper {
+  width: 100%;
+  min-height: 100vh;
 }
 
 .container {
   display: grid;
   grid-template-columns: 3fr 2fr;
   gap: 20px;
-  
+  width: 90%;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+.column {
+  background-color: darkslategray;
+  padding: 1rem;
+  border-radius: 8px;
 }
 
