--- a/src/index.css
+++ b/src/index.css
@@ -70,11 +70,13 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1;
 }
 
 h2 {
   font-size: 2em;
+  line-height: 0.5;
+  margin-top: 8px;
 }
 
 button {
